@@ -7,7 +7,6 @@
 // ./gradlew distZip
 
 plugins {
-    id 'org.beryx.jlink' version '2.21.1'
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.7'
@@ -24,7 +23,7 @@ java {
 }
 
 application {
-    mainModule = 'javafx' // RPM, DEB on Linux: On Red Hat Linux, we need the rpm-build package; on Ubuntu Linux, we need the fakeroot packagename defined in module-info.java
+    mainModule = 'javafx' // name defined in module-info.java
     mainClass = 'ehu.isad.Main'
 }
 
@@ -53,25 +52,7 @@ repositories {
 }
 
 def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED', '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
-jlink {
 
-
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'whatwebfx'
-
-        jvmArgs = [
-                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
-        ]
-    }
-
-    jpackage {
-        jpackageHome = '/home/igor/.sdkman/candidates/java/14.0.2.hs-adpt'
-        if (org.gradle.internal.os.OperatingSystem.current().windows) {
-            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
-        }
-    }
-}
 run {
     inputs.property('moduleName', moduleName)
     doFirst {
